Update text info

--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
                     <div class="hero__flags-cover">
                         <div class="hero__flags">
                             <div class="flag-uk flag-item">
-                                <img src="/img/flags/uk.png" alt="">
+                                <img src="img/flags/uk.png" alt="">
                             </div>
                             <div class="flag-ukraine flag-item">
-                                <img src="/img/flags/ukraine.png" alt="">
+                                <img src="img/flags/ukraine.png" alt="">
                             </div>
                             <div class="flag-france flag-item">
-                                <img src="/img/flags/france.png" alt="">
+                                <img src="img/flags/france.png" alt="">
                             </div>
                             <div class="flag-italy flag-item">
-                                <img src="/img/flags/italy.png" alt="">
+                                <img src="img/flags/italy.png" alt="">
                             </div>
                             <div class="flag-spain flag-item">
-                                <img src="/img/flags/spain.png" alt="">
+                                <img src="img/flags/spain.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -73,33 +73,37 @@
                     <div class="about-project__text-block">
                         <div class="about-project__text">
                             <h2>Learn languages thought real-life travel experiences</h2>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                                has been the industry's standard dummy text ever since the 1500s, when an unknown
-                                printer took a galley of type and scrambled it to make a type specimen book. It has
-                                survived not only five centuries, but also the leap into electronic typesetting,
-                                remaining essentially unchanged. It was popularised in the 1960s with the release of
-                                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
-                                publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                            <p>Stop memorizing. Start speaking.
+                                <br><br>
+                                Now you don’t have to struggle to combine studying, fun vacations, and real practice —
+                                everything is finally in one place.
+                                Immerse helps you learn a language online, and then practice it in real life through
+                                structured immersion trips.Every unit ends with a real-world experience designed for
+                                your level and goals.
+                                With Immerse, you:<br>
+                                - Learn online with structured lessons<br>
+                                - Travel with a purpose<br>
+                                - Practice in real-life situations<br>
+                                - Build real confidence, not just knowledge<br>
+
+                            </p>
                         </div>
                         <div class="about-project__advantage advantage-about-project">
                             <div class="advantage-about-project__row">
                                 <div class="advantage-about-project__item">
                                     <img class="advantage-icon" src="img/icons/adv-3.png" alt="advantage">
-                                    <h3>Practical Speaking</h3>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                        Ipsum has been </p>
+                                    <h3>Interactive Learning</h3>
+                                    <p>Learn with structured online lessons, live sessions, and guided practice</p>
                                 </div>
                                 <div class="advantage-about-project__item">
                                     <img class="advantage-icon" src="img/icons/adv-2.png" alt="advantage">
-                                    <h3>Cultural</h3>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                        Ipsum has been </p>
+                                    <h3>Cultural Immersion</h3>
+                                    <p>Experience the culture while learning the language from real life</p>
                                 </div>
                                 <div class="advantage-about-project__item">
                                     <img class="advantage-icon" src="img/icons/adv-1.png" alt="advantage">
-                                    <h3>Travel & Learn</h3>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                        Ipsum has been </p>
+                                    <h3>Learn & Travel</h3>
+                                    <p>3 immersion trips every 6 months to practice everything you’ve learned</p>
                                 </div>
                             </div>
                         </div>
@@ -112,9 +116,10 @@
             <section class="our-team" id="our-team-id">
                 <div class="our-team__container">
                     <div class="our-team__title">
-                        <h2>Our Team</h2>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's </p>
+                        <h2>Meet Our Team</h2>
+                        <p>We combine expertise in language education and digital development to create real-life
+                            immersive language experiences. Through structured courses and guided travel, we help adults
+                            turn years of study into confident, natural communication</p>
                     </div>
                     <div class="our-team__content">
                         <div class="cards">
